--- a/back/app/pyproject.toml
+++ b/back/app/pyproject.toml
@@ -7,6 +7,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+pydantic-settings = "^2.6.1"
+fastapi = {extras = ["all"], version = "^0.115.5"}
+uvicorn = "^0.32.0"
+pydantic = "^2.9.2"
+alembic = "^1.14.0"
+sqlalchemy = "^2.0.36"
+loguru = "^0.7.2"
 
 
 [build-system]
