--- a/back/pyproject.toml
+++ b/back/pyproject.toml
@@ -15,7 +15,8 @@ alembic = "^1.14.0"
 sqlalchemy = "^2.0.36"
 loguru = "^0.7.2"
 asyncpg = "^0.30.0"
-
+passlib = {extras = ["bcrypt"], version = "1.7.4"}
+python-jose = "^3.3.0"
 
 [build-system]
 requires = ["poetry-core"]
