(back) add minio

--- a/back/pyproject.toml
+++ b/back/pyproject.toml
@@ -17,6 +17,7 @@ loguru = "^0.7.2"
 asyncpg = "^0.30.0"
 passlib = {extras = ["bcrypt"], version = "1.7.4"}
 python-jose = "^3.3.0"
+minio = "^7.2.12"
 
 [build-system]
 requires = ["poetry-core"]
